// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography.P4 should render default markup when no props are passed 1`] = `
<p
  className="p4 p4--regular p4--onyx-base hIHDEN"
>
  Hello world
</p>
`;

exports[`Typography.P4 should render with a custom color prop that lacks variants 1`] = `
<p
  className="p4 p4--regular jalcfp"
  color="brand"
>
  Hello world
</p>
`;

exports[`Typography.P4 should render with a custom weight prop 1`] = `
<p
  className="p4 p4--semiBold p4--onyx-base SGsks"
>
  Hello world
</p>
`;

exports[`Typography.P4 should render with custom color and variant props 1`] = `
<p
  className="p4 p4--regular p4--accent01-dark iDZlLr"
  color="accent01"
>
  Hello world
</p>
`;

exports[`Typography.P4 should render without children 1`] = `
<p
  className="p4 p4--regular p4--onyx-base hIHDEN"
/>
`;
